--- a/Notes/Main.tex
+++ b/Notes/Main.tex
@@ -5,8 +5,8 @@
 
 \begin{document}
 
-    \input{Chapter_1}
-    \input{Chapter_2}
-    \input{Chapter_3}
+    \input{Chapter_1.tex}
+    \input{Chapter_2.tex}
+    \input{Chapter_3.tex}
 
 \end{document}
