Updated Chp.4 notes

--- a/Notes/Chapter_3.tex
+++ b/Notes/Chapter_3.tex
@@ -499,7 +499,7 @@ A couple \textbf{remarks}:
 The \textbf{canonical form} of a distribution which belongs to the k-parameter exponential family is obtained through the so-called natural parametrization, 
 $\alpha_j = \omega_j(\theta)$, $j = 1,\ldots,k$
 \begin{equation*}
-    f(x|alpha) = d(\alpha)\: h(x)\: \exp\left[\sum_{j=1}^{k}\alpha_j\: R_j(x)\right]
+    f(x|\alpha) = d(\alpha)\: h(x)\: \exp\left[\sum_{j=1}^{k}\alpha_j\: R_j(x)\right]
 \end{equation*}
 where $\alpha = (\alpha_1,\ldots,\alpha_k)\in A$ is called the natural parameter and $A$ being called the natural parameteric space.
 \ex[]{Exponential family : Normal}{
